--- a/css/main.css
+++ b/css/main.css
@@ -288,7 +288,7 @@ i.fas.fa-star {
 /* faq section css */
 section.main-faq-section {
   background-color: #fff;
-  padding: 40px 0;
+  padding: 0 0 80px;
 }
 .main-faq{
   overflow: hidden;
@@ -353,4 +353,38 @@ section.main-faq-section {
   max-height: 100vh;
   padding: 1em;
 
+}
+
+/* footer section css styles */
+footer {
+  background-color: #0A0826;
+  padding: 50px 0;
+}.footer-content {
+  text-align: center;
+  color: #fff;
+}
+.footer-content h2.h2 {
+  margin-bottom: 15px;
+}
+.footer-content p.p:nth-child(3) {
+  margin-bottom: 15px;
+}
+ul.social-inner {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+li.social-items {
+  margin-right: 15px;
+}
+a.sicial-link {
+  color: #fff;
+}
+.sicial-link i {
+  font-size: 32px;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  background-color: #22213C;
+  border-radius: 50%;
 }
