--- a/css/main.css
+++ b/css/main.css
@@ -287,6 +287,7 @@ i.fas.fa-star {
   margin-top: 30px;
 }
 .see-more-button a.btn {
+  margin-left:auto;
   background-color: transparent;
   color: #E02C6D;
   border-color: transparent;
