--- a/css/main.css
+++ b/css/main.css
@@ -327,9 +327,9 @@ section.main-faq-section {
   background-color: #8f224a;
 }
 .main-faq .main-tab-toggle:checked ~ .main-tab-label{
-  border-radius: 0 !important;
-  border-top-left-radius: 8px !important;
-  border-top-right-radius: 8px !important;
+  border-radius: 0;
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
   background-color: #8f224a;
 }
 .main-faq .main-tab-label::after{
@@ -354,9 +354,9 @@ section.main-faq-section {
   
 }
 .main-faq .main-tab-toggle:checked ~ .main-tab-content{
-  border-radius: 0 !important;
-  border-bottom-right-radius: 8px !important;
-  border-bottom-left-radius: 8px !important;
+  border-radius: 0;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 8px;
   max-height: 100vh;
   padding: 1em;
 
